Closed
Bug 314759
Opened 20 years ago
Closed 20 years ago
ASSERTION: title not in head: 'mCurrentContext == mHeadContext'
Categories
(Core :: DOM: HTML Parser, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla1.9alpha1
People
(Reporter: martijn.martijn, Assigned: mrbkap)
References
()
Details
(Keywords: assertion, testcase)
Attachments
(2 files, 1 obsolete file)
|
71 bytes,
text/html
|
Details | |
|
1.15 KB,
patch
|
sicking
:
review+
jst
:
superreview+
|
Details | Diff | Splinter Review |
See testcase, when having this:
<html><head>
<frameset></frameset>
<title</title></head>
</html>
I get an assertion in current debug build. Notice the missing '>' in the <title>
"###!!! ASSERTION: title not in head: 'mCurrentContext == mHeadContext', file c:/
mozilla/mozilla/content/html/document/src/nsHTMLContentSink.cpp, line 2980"
| Reporter | ||
Comment 1•20 years ago
|
||
| Reporter | ||
Comment 2•20 years ago
|
||
There needs to be also some space at the beginning to get the assertion.
Attachment #201622 -
Attachment is obsolete: true
| Assignee | ||
Comment 3•20 years ago
|
||
This looks like it's fallout from one of Sicking's changes. Patch upcoming.
Status: NEW → ASSIGNED
Priority: -- → P2
Target Milestone: --- → mozilla1.9alpha
| Assignee | ||
Comment 4•20 years ago
|
||
We needed to close the head before opening the frameset (so that our flags got updated). This may have been my fault from bug 272702 after all.
Attachment #201657 -
Flags: review?(bugmail)
Attachment #201657 -
Flags: review?(bugmail) → review+
| Assignee | ||
Updated•20 years ago
|
Attachment #201657 -
Flags: superreview?(jst)
Comment 5•20 years ago
|
||
Comment on attachment 201657 [details] [diff] [review]
Close the head before opening frameset
sr=jst
Attachment #201657 -
Flags: superreview?(jst) → superreview+
| Assignee | ||
Comment 6•20 years ago
|
||
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•