bug 314759: Update our flags when we open a frameset and close the head. r=sicking sr=jst